# cmake-ext

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  eastl.cmake  gatbcore.cmake  googletest.cmake  htslib.cmake  klib.cmake  parasail.cmake  sdsl.cmake  seqan.cmake  smhasher.cmake  ssw.cmake  zlib.cmake
tests/: .gitignore  CMakeLists.txt  example.cpp  regenerate_links.sh
tests/cmake-ext/: eastl.cmake  gatbcore.cmake  googletest.cmake  htslib.cmake  klib.cmake  parasail.cmake  sdsl.cmake  seqan.cmake  smhasher.cmake  ssw.cmake  zlib.cmake
